Fixed issue with the pin always being visible

--- a/client/main/vareditor/datavarwidget.css
+++ b/client/main/vareditor/datavarwidget.css
@@ -286,7 +286,6 @@
     width: 20px;
     height: 20px;
     position: absolute;
-    z-index: 3000;
     top: 5px;
     left: 5px;
     background-repeat: no-repeat;
